src/components/projectCard/style.css
.project-card__title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 18px;
  font-weight: 600;
  line-height: 24px;
  color: var(--color-white);
}

.project-card__list {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  gap: 8px;
}

.project-card__item {
  display: flex;
  gap: 48px;
}

.project-card__image {
  position: relative;
  width: 600px;
  max-height: 600px;
  padding-top: 126px;
  padding-bottom: 126px;
  padding-left: 57px;
  padding-right: 57px;
  background-color: var(--color-blue-700);
  border-radius: var(--border-radius-s);
  box-sizing: border-box;
}

.project-card__info {
  width: 576px;
  padding-top: 60px;
  padding-bottom: 60px;
}

.project-card__info-title {
  margin-bottom: 16px;
  font-family: "Inter", sans-serif;
  font-size: 32px;
  font-weight: 500;
  line-height: 38px;
  color: var(--color-blue-700);
}

.project-card__info-desc {
  margin-bottom: 32px;
  font-size: 18px;
  line-height: 24px;
  color: var(--color-blue-700);
}

.project-card__info-box {
  margin-bottom: 48px;
}

.project-card__info-box h4 {
  margin-bottom: 16px;
  font-family: "Inter", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 22px;
  color: var(--color-blue-700);
}

.projcet-card__info-box-table-row {
  display: flex;
  justify-content: space-between;
  padding-top: 16px;
  padding-bottom: 16px;
}

.projcet-card__info-box-table-row:first-child {
  border-top: 1px solid var(--color-blue-700);
}

.projcet-card__info-box-table-row:last-child {
  border-top: 1px solid var(--color-blue-700);
  border-bottom: 1px solid var(--color-blue-700);
}

.projcet-card__info-box-table-row span {
  font-size: 16px;
  font-weight: 500;
  line-height: 22px;
  color: var(--color-blue-700);
}

.project-card__link {
  display: block;
}

.project-card__tag-box {
  position: absolute;
  top: 16px;
  left: 16px;
}

.project-card__img {
  border-radius: var(--border-radius-s);
}

.project-card__tools {
  display: flex;
  flex-direction: column;
}

.project-card__tools-title {
  margin-bottom: 16px;
  font-family: "Inter", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 22px;
  color: var(--color-blue-700);
}

.project-card__tools-list {
  display: flex;
  gap: 16px;
}

@media screen and (max-width: 688px) {
  .project-card {
    background-color: transparent;
    box-shadow: none;
  }

  .project-card__item {
    min-width: initial;
  }
}

@media screen and (max-width: 488px) {
  .project-card__item {
    width: 100%;
  }
}

